# dvc-github-actions

./: .gitignore  Makefile  artifacts.dvc  data.py  pyproject.toml
.dvc/: config
.github/workflows/: data_pipeline.yaml
