[project]
name = "dvc-github-actions"
version = "0.1.0"
description = "Batch pipeline implementation with DVC, GDrive, and GitHub Actions"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "dvc>=3.67.0",
    "dvc-gdrive>=3.0.1",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
]